<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_lo"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sungwoo.boostcamp.widgetgame.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:text="@string/app_name"
        android:gravity="center"/>
    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/vertical_margin1"
        android:layout_marginRight="@dimen/vertical_margin1"
        android:hint="@string/LOGIN_EMAIL_HINT"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:maxLength="30"/>
    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/vertical_margin1"
        android:layout_marginRight="@dimen/vertical_margin1"
        android:hint="@string/LOGIN_PASSWORD_HINT"
        android:maxLines="1"
        android:inputType="textPassword"
        android:maxLength="20"/>
    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/vertical_margin1"
        android:layout_marginRight="@dimen/vertical_margin1"
        android:text="@string/LOGIN_LOGIN"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN_JOIN_PRE"
        android:gravity="center"/>
    <Button
        android:id="@+id/login_join_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlueButton"
        android:background="@android:color/transparent"
        android:text="@string/LOGIN_JOIN"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN_JOIN_POST"
        android:gravity="center"/>
</LinearLayout>
