<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_4"
    android:paddingRight="@dimen/horizontal_4"
    android:paddingTop="@dimen/vertical_8"
    tools:context="com.sungwoo.boostcamp.widgetgame.JoinActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="@dimen/horizontal_12_fix"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/JOIN_EMAIL"/>
        <TextView
            android:layout_width="@dimen/horizontal_2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/JOIN_SECTIONBAR"/>
        <EditText
            android:id="@+id/join_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/LENGTH_EMAIL"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_4"
        android:gravity="center">
        <TextView
            android:layout_width="@dimen/horizontal_12_fix"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/JOIN_PASSWORD"/>
        <TextView
            android:layout_width="@dimen/horizontal_2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/JOIN_SECTIONBAR"/>
        <EditText
            android:id="@+id/join_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@integer/LENGTH_PASSWORD"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_4"
        android:gravity="center">
        <TextView
            android:layout_width="@dimen/horizontal_12_fix"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/JOIN_NICKNAME"/>
        <TextView
            android:layout_width="@dimen/horizontal_2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/JOIN_SECTIONBAR"/>
        <EditText
            android:id="@+id/join_nickname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="@integer/LENGTH_NICKNAME"
            android:maxLines="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/join_join_btn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_8"
        android:layout_marginRight="@dimen/horizontal_8"
        android:layout_marginTop="@dimen/vertical_8"
        android:text="@string/JOIN_JOIN"/>
</LinearLayout>
