<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_license_and_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/horizontal_8"
    android:paddingRight="@dimen/horizontal_8"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sungwoo.boostcamp.widgetgame.LicnseAndReport.LicenseAndReport">

    <View
        android:layout_marginTop="@dimen/vertical_15"
        android:layout_marginBottom="@dimen/vertical_1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorDarkGray" />
    <Button
        android:id="@+id/license_and_report_open_license_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarButtonStyle"
        android:text="@string/LICENSE_AND_REPORT_SHOW_LICENSE"/>
    <View
        android:layout_marginTop="@dimen/vertical_1"
        android:layout_marginBottom="@dimen/vertical_1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorDarkGray" />

    <Button
        android:id="@+id/license_and_report_send_report_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarButtonStyle"
        android:text="@string/LICENSE_AND_REPORT_SEND_REPORT"/>
    <View
        android:layout_marginTop="@dimen/vertical_1"
        android:layout_marginBottom="@dimen/vertical_1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorDarkGray" />

    <EditText
        android:id="@+id/license_and_report_report_description_et"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:hint="@string/LICENSE_AND_REPORT_REPORT_CONTENT"/>
</LinearLayout>
