<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_make_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_2"
    android:paddingRight="@dimen/horizontal_2"
    android:paddingTop="@dimen/horizontal_2"
    android:paddingBottom="@dimen/horizontal_2"
    tools:context="com.sungwoo.boostcamp.widgetgame.make_game.MakeGamePageActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/horizontal_20_fix"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size5"
                android:text="@string/MAKE_GAME_PAGE_INDEX_TEXT" />

            <Spinner
                android:id="@+id/make_index_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"></Spinner>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/horizontal_20_fix"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size5"
                android:text="@string/MAKE_GAME_PAGE_MODE_TEXT" />

            <Spinner
                android:id="@+id/make_page_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/SPINNER_PAGES"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/horizontal_20_fix"
                android:layout_height="wrap_content"
                android:text="@string/MAKE_GAME_PAGE_SOUND_TEXT"
                android:textSize="@dimen/text_size5"/>

            <Spinner
                android:id="@+id/make_sound_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/SPINNER_SOUNDS"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/horizontal_25_fix"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size5"
                android:text="@string/MAKE_GAME_PAGE_VIBRATE_TEXT" />

            <Switch
                android:id="@+id/make_vibrate_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Switch>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/make_page_image_fl"
            android:layout_width="320dp"
            android:layout_height="240dp">

            <ImageView
                android:id="@+id/make_page_image_iv"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/DESC_MAKE_GAME_PAGE_IV" />

            <TextView
                android:id="@+id/make_page_image_tv"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MAKE_IMAGE_SELECT" />
        </FrameLayout>

        <EditText
            android:id="@+id/make_page_title_et"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:hint="@string/MAKE_GAME_PAGE_TITLE"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1" />

        <EditText
            android:id="@+id/make_page_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="6"
            android:minHeight="180dp"
            android:textAlignment="textStart" />

        <LinearLayout
            android:id="@+id/make_page_selections_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/make_selections_cb1"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/make_selections_et1"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/make_target_et1"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/make_selections_cb2"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/make_selections_et2"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/make_target_et2"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/make_selections_cb3"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/make_selections_et3"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/make_target_et3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/make_selections_cb4"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/make_selections_et4"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/make_target_et4"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/make_page_confirm_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/MAKE_CONFIRM" />

            <Button
                android:id="@+id/make_page_cancel_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/MAKE_DELETE" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
